Finish MySQL and PostgreSQL pages

--- a/frontend/MySQL/MySQL.css
+++ b/frontend/MySQL/MySQL.css
@@ -1,6 +1,5 @@
 body {
-    background-color:  #336791;
-    /*background-color: #f29111*/
+    background-color: #f29111;
     
     font-family: "Lato", sans-serif;
 }
